fixed menu bar gap

--- a/controls/graphView/graphView.css
+++ b/controls/graphView/graphView.css
@@ -11,7 +11,6 @@
     height:     calc(100% - 40px);
     position:   relative;
     z-index:    2;
-    box-shadow: 0 1px 0 0 inset #383838;
     /* box-shadow: 0 0 0 1px red inset; */
 }
 
