--- a/controls/menu/menus.css
+++ b/controls/menu/menus.css
@@ -3,6 +3,7 @@
     display:          flex;
     height:           39px;
     background-color: #2c2c2c;
+    border-bottom:    1px solid #383838;
     /* border-bottom:    1px solid var(--figma-color-bg-tertiary); */
     padding:          0;
     cursor:           default;
